<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
<!--        Phone call-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10dp"
            android:hint="@string/Number"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:prefixText="@string/prefix"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:id="@+id/tiet_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10dp"
            android:padding="10dp"
            android:text="@string/phone"
            android:textSize="@dimen/dimen18sp" />


<!--        Maps-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10dp"
            android:hint="@string/location"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10dp"
            android:padding="10dp"
            android:text="@string/maps"
            android:textSize="@dimen/dimen18sp" />


<!--        Webpage-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_website"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10dp"
            android:hint="@string/website"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:prefixText="@string/prefixWeb"
            app:helperTextTextColor="@color/red"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen10dp"
            android:padding="10dp"
            android:text="@string/browser"
            android:textSize="@dimen/dimen18sp" />
    </LinearLayout>

</RelativeLayout>